k8s/system/traefik/resources/whoami/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami:v1.12.0@sha256:c4717a8d1f0134a7444e24f881160e033991f23027c6c5a9a3f8fd22e70d1d44
          args:
            - --port=8080
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      hostname: whoami
      securityContext:
        seccompProfile:
          type: RuntimeDefault
