k8s/system/traefik/resources/whoami/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
